# bytecode-interpreter

./: .gitignore  build.zig
c/: CMakeLists.txt  Makefile
c/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
in_clang/: .clang-format  .gitignore  CMakeLists.txt  Makefile  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
in_clang/.zed/: tasks.json
in_clang/__sandbox/: pratt_parser.c
in_clang/src/: chunk.c  chunk.h  compiler.c  compiler.h  debug.c  debug.h  object.c  object.h  scanner.c  table.c  table.h  value.c  value.h  vm.c  vm.h
rustlulu/: Cargo.toml
rustlulu/.zed/: tasks.json
rustlulu/src/: main.rs  scanner.rs
src/: Compiler.zig  DynArray.zig  Scanner.zig  Token.zig  ValueArr.zig  chunk.zig  debug.zig  main.zig  memory.zig  value.zig  vm.zig
zig/: build.zig
zig/src/: Chunk.zig  OpCode.zig  VM.zig  ValueArr.zig  debug.zig  main.zig
zigulu/: build.zig.zon
zigulu/src/: Compiler.zig  HashMap.zig  Scanner.zig  ValueArr.zig  debug.zig  main.zig  object.zig  vm.zig
zigulu/src/__sandbox/: pratt_parser.zig
